syntax = "proto3";
package bringyour;

import "frame.proto";

option go_package = "bringyour.com/protocol";


message SimpleMessage {
    int message_index = 1;
    int message_count = 2;
    string content = 3;
}
